# go_game

./: .travis.yml  Button.cpp  Button.hpp  CMakeLists.txt  CMakeSettings.json  MainMenu.cpp  MainMenu.hpp  Menu.hpp  README.md  Source.cpp  Table.cpp  Table.hpp  TableStone.cpp  TableStone.hpp  Test.cpp  for_mainmenu.hpp  go c++.vcxproj  go c++.vcxproj.filters  math_functions.hpp
Debug/: go c++.ilk  vc141.idb  vc142.idb
Debug/go c++.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  go c++.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
documents/: Курсовая_презентация.pptx  РПЗ_Кадыков_ИУ8-32.docx  ТЗ_Кадыков_ИУ8-32.doc
include/: MainMenu.hpp  Table.hpp  TableStone.hpp
server_for_go/: server_go.cpp
server_for_go/server_for_go/: playtable.cpp  playtable.hpp  server_go.cpp  server_go.hpp
sources/: Button.cpp  MainMenu.cpp  Table.cpp  for_mainmenu.cpp  source.cpp
tests/: test.cpp
